k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-auth-deployment
  namespace: delivery
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nestjs-auth
  template:
    metadata:
      labels:
        app: nestjs-auth
    spec:
      containers:
        - name: nestjs-auth
          image: jerisantos/nestjs-auth:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3333
